--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         console.log(`User response to the install prompt: ${outcome}`);
         // Ya no necesitamos el prompt guardado
         deferredPrompt = null;
-        // Ocultar el botón de instalación
+        // Ocultar el botón de instalación.
         installButton.style.display = 'none';
       }
     });
